--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <p>Click below to view/download my resume:</p>
 
     <!-- ⬇ Replace link below once your PDF is uploaded -->
-    <a href="resume.pdf" target="_blank">Download Resume</a>
+    <a href="Resume.pdf" target="_blank">Download Resume</a>
 </section>
 
 <footer>
