Update contact information in footer
Updated contact email and added LinkedIn and GitHub links.

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 </section>
 
 <footer>
-    <p>Contact: <a href="mailto:youremail@gmail.com">youremail@gmail.com</a> · 
-    <a href="#">LinkedIn</a> · <a href="#">GitHub</a></p>
+    <p>Contact: <a href="mailto:manavreddy.v@gmail.com">manavreddy.v@gmail.com</a> · 
+    <a href="#">LinkedIn<https://www.linkedin.com/in/manav-reddy-6b1aa6245//a> · <a href="#">GitHub<https://github.com/manavreddy/a></p>
 </footer>
 
 </body>
