--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
     header h1 { font-size:2.5rem; margin-bottom:10px; }
     header p { font-size:1.1rem; opacity:0.85; }
 
-    section { max-width:900px; margin:40px auto; background:#fff; padding:40px; border-radius:12px; 
-    box-shadow:0 0 12px rgba(0,0,0,0.08); }
-    section h2 { margin-bottom:15px; font-size:1.8rem; font-weight:bold; }
-    ul { padding-left:20px; }
+    section { max-width:900px; margin:40px auto; background:#fff; padding:40px;
+    border-radius:12px; box-shadow:0 0 12px rgba(0,0,0,0.08); }
 
-    .resume a { display:inline-block; padding:10px 18px; background:#111; color:#fff; text-decoration:none;
-    border-radius:6px; font-size:1rem; margin-top:10px; }
+    section h2 { margin-bottom:15px; font-size:1.8rem; font-weight:bold; }
+    h3 { margin-top:22px; }
+
+    ul { padding-left:20px; }
+    li { margin-bottom:12px; }
+
+    /* Resume Button */
+    .resume a {
+        display:inline-block; padding:10px 18px; background:#111; color:#fff;
+        text-decoration:none; border-radius:6px; font-size:1rem; margin-top:10px;
+    }
     .resume a:hover { background:#333; }
 
     footer { background:#111; color:#fff; text-align:center; padding:20px; margin-top:50px; }
@@ -33,15 +40,14 @@
 
 <header>
     <h1>Manav Reddy V</h1>
-    <p>Software | Machine Learning | Backend | Systems</p>
+    <p>Software | Machine Learning | Backend | Systems | Cloud</p>
 </header>
 
 <section>
     <h2>About Me</h2>
     <p>I graduated from IIT Kanpur with a major in Statistics and Data Science.
     I currently work at Axxela, where I explored trading but realised I'm more aligned with
-    software engineering & machine learning. I’m building and deploying projects
-    to move toward engineering-heavy tech roles.</p>
+    engineering + ML development. I'm actively building projects to transition into a full-tech role.</p>
 </section>
 
 <section>
@@ -61,24 +67,41 @@
 <section>
     <h2>Projects</h2>
     <ul>
-        <li><b>Multi-Agent Borrower Assistance System</b> — LLM-based platform for debt resolution using 
+        <li><b>Multi-Agent Borrower Assistance System</b> — LLM-based platform for debt resolution using
         FastAPI + Ollama + Multi-Agent coordination.</li>
 
         <li><b>Fraud Detection ML Pipeline</b> — feature engineering, imbalance handling, model evaluation & insights.</li>
+
+        <li><b>Real-Time Chat Application</b> — Spring Boot • WebSocket • AWS RDS • SNS • Docker • EC2<br>
+            Built real-time chat app with authentication, persistent message storage, typing indicators & push-notifications.
+        </li>
+
+        <li><b>System Monitoring & Log Analyzer Tool</b> — Java • Multithreading • SQLite<br>
+            CLI-based monitoring tool with concurrent metric tracking, log parsing & periodic reporting system.
+        </li>
+
+        <li><b>Cricket Winner Prediction (AXP Challenge Finalist)</b> — XGBoost • LightGBM • Ensemble Models<br>
+            62% OOS accuracy using stacking, feature engineering & hyperparameter tuning.
+        </li>
+
+        <li><b>Distributed Job Scheduler</b> — AWS SQS • Lambda • DynamoDB • Fargate • Docker<br>
+            Auto-scaling distributed job executor with fault-tolerant metadata system & CloudWatch monitoring.
+        </li>
     </ul>
 </section>
 
 <section class="resume">
     <h2>Resume</h2>
     <p>Click below to view/download my resume:</p>
-
-    <!-- ⬇ Replace link below once your PDF is uploaded -->
     <a href="Resume.pdf" target="_blank">Download Resume</a>
 </section>
 
 <footer>
-    <p>Contact: <a href="mailto:manavreddy.v@gmail.com">manavreddy.v@gmail.com</a> · 
-    <a href="#">LinkedIn<https://www.linkedin.com/in/manav-reddy-6b1aa6245//a> · <a href="#">GitHub<https://github.com/manavreddy/a></p>
+    <p>
+        Contact: <a href="mailto:manavreddy.v@gmail.com">manavreddy.v@gmail.com</a> · 
+        <a href="https://www.linkedin.com/in/manav-reddy-6b1aa6245/" target="_blank">LinkedIn</a> · 
+        <a href="https://github.com/manavreddy" target="_blank">GitHub</a>
+    </p>
 </footer>
 
 </body>
