--- a/index.html
+++ b/index.html
@@ -67,25 +67,19 @@
 <section>
     <h2>Projects</h2>
     <ul>
-        <li><b>Multi-Agent Borrower Assistance System</b> — LLM-based platform for debt resolution using
+        <li><b>Multi-Agent Borrower Assistance System</b> - LLM-based platform for debt resolution using
         FastAPI + Ollama + Multi-Agent coordination.</li>
 
-        <li><b>Fraud Detection ML Pipeline</b> — feature engineering, imbalance handling, model evaluation & insights.</li>
-
-        <li><b>Real-Time Chat Application</b> — Spring Boot • WebSocket • AWS RDS • SNS • Docker • EC2<br>
-            Built real-time chat app with authentication, persistent message storage, typing indicators & push-notifications.
+        <li><b>Real-Time Chat Application</b> - Built real-time chat app with authentication, persistent message storage, typing indicators & push-notifications.
         </li>
 
-        <li><b>System Monitoring & Log Analyzer Tool</b> — Java • Multithreading • SQLite<br>
-            CLI-based monitoring tool with concurrent metric tracking, log parsing & periodic reporting system.
+        <li><b>System Monitoring & Log Analyzer Tool</b> - CLI-based monitoring tool with concurrent metric tracking, log parsing & periodic reporting system.
         </li>
 
-        <li><b>Cricket Winner Prediction (AXP Challenge Finalist)</b> — XGBoost • LightGBM • Ensemble Models<br>
-            62% OOS accuracy using stacking, feature engineering & hyperparameter tuning.
+        <li><b>Cricket Winner Prediction (AXP Challenge Finalist)</b> 62% OOS accuracy using stacking, feature engineering & hyperparameter tuning.
         </li>
 
-        <li><b>Distributed Job Scheduler</b> — AWS SQS • Lambda • DynamoDB • Fargate • Docker<br>
-            Auto-scaling distributed job executor with fault-tolerant metadata system & CloudWatch monitoring.
+        <li><b>Distributed Job Scheduler</b> - Auto-scaling distributed job executor with fault-tolerant metadata system & CloudWatch monitoring.
         </li>
     </ul>
 </section>
