--- a/index.html
+++ b/index.html
@@ -67,22 +67,51 @@
 <section>
     <h2>Projects</h2>
     <ul>
-        <li><b>Multi-Agent Borrower Assistance System</b> - LLM-based platform for debt resolution using
-        FastAPI + Ollama + Multi-Agent coordination.</li>
 
-        <li><b>Real-Time Chat Application</b> - Built real-time chat app with authentication, persistent message storage, typing indicators & push-notifications.
+        <li><b>Real-Time Chat Application</b><br>
+            Developed a real-time chat system with authentication, persistent message storage,
+            online presence tracking, typing indicators, delivery confirmations, and push notifications.
+            Containerized with Docker and deployed for scalable usage.
         </li>
 
-        <li><b>System Monitoring & Log Analyzer Tool</b> - CLI-based monitoring tool with concurrent metric tracking, log parsing & periodic reporting system.
+        <li><b>Distributed Job Scheduler</b><br>
+            Designed a distributed asynchronous job execution engine with automatic scaling,
+            queue-based task coordination, failure recovery, and full monitoring/alerting pipeline.
         </li>
 
-        <li><b>Cricket Winner Prediction (AXP Challenge Finalist)</b> 62% OOS accuracy using stacking, feature engineering & hyperparameter tuning.
+        <li><b>Multi-Agent Borrower Assistance System</b><br>
+            Built a multi-agent decision workflow that assists distressed borrowers with structured
+            debt-resolution guidance and automated reasoning.
         </li>
 
-        <li><b>Distributed Job Scheduler</b> - Auto-scaling distributed job executor with fault-tolerant metadata system & CloudWatch monitoring.
+        <li><b>System Monitoring & Log Analyzer Tool</b><br>
+            Developed a system resource monitor and log analyzer with multi-threaded data collection,
+            event parsing, periodic reporting, and a CLI interface for live insights.
         </li>
+
+        <li><b>Cricket Winner Prediction (AXP Campus Finalist)</b><br>
+            Created an ensemble-based cricket match winner predictor with strong feature engineering
+            and hyperparameter optimization, achieving competitive out-of-sample results.
+        </li>
+
+        <li><b>Fraud Detection ML Pipeline</b><br>
+            Built a full fraud detection pipeline including data processing, imbalance handling,
+            model training, performance evaluation, and comparison of multiple classifiers.
+        </li>
+
+        <li><b>Anomaly Detection in Traffic Data (MTH 442)</b><br>
+            Analyzed taxi movement data to detect unusual high-traffic intervals and modeled patterns
+            using temporal decomposition, revealing 7 anomalies linked to real-world events.
+        </li>
+
+        <li><b>COVID-19 Outcomes Analysis (MTH 208)</b><br>
+            Scraped global COVID metrics, visualized statistical patterns across GDP groups, and
+            highlighted how economic conditions impact healthcare outcomes and mortality.
+        </li>
+
     </ul>
 </section>
+
 
 <section class="resume">
     <h2>Resume</h2>
